// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button component > applies additional class names 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center self-center w-auto rounded-sm gap-2 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-4 text-base bg-slate-800 hover:bg-slate-700 text-slate-300 border border-slate-500 extra-class"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Button component > matches default styles with snapshot 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center self-center w-auto rounded-sm gap-2 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-4 text-base bg-slate-800 hover:bg-slate-700 text-slate-300 border border-slate-500"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Button component > renders the button with children 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center self-center w-auto rounded-sm gap-2 disabled:cursor-not-allowed disabled:opacity-50 h-8 px-4 text-base bg-slate-800 hover:bg-slate-700 text-slate-300 border border-slate-500"
    type="button"
  >
    Click me
  </button>
</div>
`;
